--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@deck.gl/layers": "^9.2.6",
+    "@deck.gl/react": "^9.2.6",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.26.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
+    "plotly.js": "^3.3.1",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
+    "react-plotly.js": "^2.6.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
