--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@deck.gl/react": "^9.2.6",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "plotly.js": "^3.3.1",
+    "postprocessing": "^6.38.2",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
