--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "framer-motion": "^12.26.2",
+    "jsonwebtoken": "^9.0.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
@@ -31,6 +36,7 @@
     "react-leaflet": "^5.0.0",
     "react-plotly.js": "^2.6.0",
     "recharts": "^3.6.0",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
   },
